2020-01-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_handlebox.c: Use ancillary pointer to parent window in
      function geda_handle_box_realize.

    * src/widgets/geda_menu_item.c: Validate the menu item argument in functions
      geda_menu_item_get_mnemonic and geda_menu_item_set_mnemonic.

2020-01-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_image_menu_item.c: Update function documentation:

          * geda_image_menu_item_get_accel_group

    * src/widgets/geda_menu_shell.c: Revise/update signal documentation format.
      Update function documentation:

          * geda_menu_shell_insert

2020-01-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_button.c: Convert and update signal documentation.

    * src/widgets/geda_menu_shell.c: Add ancillary type = GEDA_TYPE_MENU_SHELL,
      so that geda_menu_shell_get_type for each new signal.

2019-12-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_image_menu_item.c: add todo documentation template.

    * src/widgets/geda_radio_menu_item.c: Update Doxygen group description.

    * tests/test_image_menu_item.c: Add check for geda_image_menu_item_get_accel_group.

2019-12-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Add internal gobject and widget class comments.
      Add function documentation for geda_accel_label_get_accel_width.

    * src/widgets/geda_combobox.c: Add internal GedaComboBoxClass comments, convert
      container_class and widget_class comment to internal documentation.

    * src/widgets/geda_image_menu_item.c: Reorganize module, remove unneeded ingroup
      Doxygen tags.

    * src/widgets/geda_menu_shell.c: Update Doxygen group description.

2019-12-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Add documentation for geda_accel_label_refetch
      and todo template for geda_accel_label_get_accel_width and reorganize module.
