@@ -3,8 +3,11 @@
     * src/widgets/geda_handlebox.c: Use ancillary pointer to parent window in
       function geda_handle_box_realize.
 
-    * src/widgets/geda_menu_item.c: Validate the menu item argument in functions
-      geda_menu_item_get_mnemonic and geda_menu_item_set_mnemonic.
+    * src/widgets/geda_menu_item.c: Validate the menu item argument and update
+      function documentation:
+
+          * geda_menu_item_get_mnemonic
+          * geda_menu_item_set_mnemonic
 
 2020-01-02 Wiley E. Hill <wileyhill@gmail.com>
 
